prometheus/result/prometheus/templates/server/deploy.yaml
---
# Source: prometheus/templates/server/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: "server"
    app: prometheus
    release: RELEASE-NAME
    chart: prometheus-15.0.1
    heritage: Helm
  name: prometheus-server
  namespace: prometheus-monitor
spec:
  selector:
    matchLabels:
      component: "server"
      app: prometheus
      release: RELEASE-NAME
  replicas: 1
  template:
    metadata:
      labels:
        component: "server"
        app: prometheus
        release: RELEASE-NAME
        chart: prometheus-15.0.1
        heritage: Helm
    spec:
      enableServiceLinks: true
      serviceAccountName: prometheus-server-sa
      containers:
        - name: prometheus-server-configmap-reload
          image: "jimmidyson/configmap-reload:v0.5.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - --volume-dir=/etc/config
            - --webhook-url=http://127.0.0.1:9090/-/reload
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"  
            limits:
              memory: "4096Mi"
              cpu: "4000m"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
            - mountPath: "/etc/localtime"
              name: tz-config
              readOnly: true

        - name: prometheus-server
          image: "quay.io/prometheus/prometheus:v2.31.1"
          imagePullPolicy: "IfNotPresent"
          args:
            - --storage.tsdb.retention.time=15d
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 4
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"  
            limits:
              memory: "4096Mi"
              cpu: "4000m"
          volumeMounts:
            - mountPath: "/etc/localtime"
              name: tz-config
              readOnly: true
            - name: config-volume
              mountPath: /etc/config
            - name: storage-volume
              mountPath: /data
              subPath: ""
      hostNetwork: false
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      terminationGracePeriodSeconds: 300
      volumes:
        - name: tz-config
          hostPath:
            path: "/usr/share/zoneinfo/Asia/Shanghai" 
        - name: config-volume
          configMap:
            name: prometheus-server-config
        - name: storage-volume
          persistentVolumeClaim:
            claimName: prometheus-server
