prometheus/result/prometheus/templates/server/service.yaml
---
# Source: prometheus/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "server"
    app: prometheus
    release: RELEASE-NAME
    chart: prometheus-15.0.1
    heritage: Helm
  name: prometheus-server
  namespace: prometheus-monitor
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    component: "server"
    app: prometheus
    release: RELEASE-NAME
  sessionAffinity: None
  type: "ClusterIP"
