prometheus/result/prometheus/templates/server/dashboard-hook-ingressroute.yaml
---
# 定义traefik dashboard访问验证
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: prometheus-monitor
spec:
  basicAuth:
    secret: authsecret
---
# http重定向https
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-https
#  namespace: prometheus-monitor
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-web-http
  namespace: prometheus-monitor
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`prometheus.rr.tv`)"
    kind: Rule
    middlewares:
    - name: dashboard-auth
      namespace: prometheus-monitor
    services:
    - name: prometheus-server
      port: 80
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: TraefikService
#metadata:
#  name: prometheus-server
#  namespace: prometheus-monitor
#spec:
#  weighted:
#    services:
#      - name: prometheus-server
#        weight: 1
#        port: 9090
#        kind: Service
